2004-06-11  Jeffrey Stedfast  <fejj@novell.com>

	* providers/imap4/camel-imap4-folder.c (imap4_refresh_info): Force
	updating of the emsage flags (normally this only happens if
	something has changed that warrants rescanning them).

2004-06-11  Jeffrey Stedfast  <fejj@ximian.com>

	* providers/imap4/camel-imap4-folder.c (untagged_fetch): Handle
	getting FLAGS even though we didn't request it (server can send us
	FLAGS info if another client changed them recently, for
	example). Also fixed to handle the fact that not every bit of info
	has to be in a single untagged FETCH response - it may come in
	several untagged responses.

	* providers/imap4/camel-imap4-summary.c (envelope_decode_address):
	Decode the email address name token.
	(envelope_decode_nstring): rfc2047 decode strings if requested.
	(decode_envelope): Request that the subject string be rfc2047
	decoded.

2004-06-11  Not Zed  <NotZed@Ximian.com>

	* providers/local/camel-maildir-store.c (get_folder_info): if we
	scan from "" or top == NULL, then we really want to scan from "."
	instead.

	* camel-url.c (camel_url_new_with_base): don't check the for a
	character after the # before extracting the fragment.  An empty
	fragment is still allowed and # should never be added to the path.
	See Rfc1808 2.4.1.

2004-06-11  Jeffrey Stedfast  <fejj@ximian.com>

	* providers/imap4/camel-imap4-summary.c
	(camel_imap4_summary_flush_updates): Don't bother scanning summary
	info if EXISTS was 0.
	(camel_imap4_summary_set_uidvalidity): Emit the folder_changed
	event after clearing the summary.
	(camel_imap4_summary_expunge): Emit the folder_changed event after
	removing the message from the summary.
	(camel_imap4_summary_set_exists): Only set exists_changed if the
	new and old exists values are different.
	(imap4_fetch_all_add): Emit a folder_changed signal if any new
	info's were added.
	(imap4_fetch_all_update): Emit a folder_changed event if any uids
	were removed or otherwise updated.